@@ -59,7 +59,14 @@ cd /d %ARCADEDB_HOME%
 rem Get full command line arguments for the batch file
 set CMD_LINE_ARGS=%*
 
-set JAVA_OPTS_SCRIPT=-XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dfile.encoding=UTF8 -Dpolyglot.engine.WarnInterpreterOnly=false
+set JAVA_OPTS_SCRIPT=-XX:+HeapDumpOnOutOfMemoryError ^
+  --add-exports java.management/sun.management=ALL-UNNAMED ^
+  --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED ^
+  --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED ^
+  -Dpolyglot.engine.WarnInterpreterOnly=false ^
+  -Djava.awt.headless=true ^
+  -Dfile.encoding=UTF8 ^
+  -Djava.util.logging.config.file=config/arcadedb-log.properties
 
 "%JAVACMD%" ^
  -client ^
