@@ -25,7 +25,7 @@
     <groupId>com.arcadedb</groupId>
     <artifactId>arcadedb-parent</artifactId>
     <packaging>pom</packaging>
-    <version>24.8.1-SNAPSHOT</version>
+    <version>24.11.1-SNAPSHOT</version>
 
     <name>ArcadeDB</name>
     <url>https://arcadedata.com/</url>
@@ -46,7 +46,7 @@
     </licenses>
 
     <properties>
-        <maven-compiler-plugin.release>11</maven-compiler-plugin.release>
+        <maven-compiler-plugin.release>17</maven-compiler-plugin.release>
         <exclude.tests></exclude.tests>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -54,13 +54,13 @@
         <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-        <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.5.0</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.5.1</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.5.1</maven-failsafe-plugin.version>
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-        <maven-javadoc-plugin.version>3.10.0</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.10.1</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-        <maven-gpg-plugin.version>3.2.5</maven-gpg-plugin.version>
+        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
         <maven-versions-plugin.version>2.17.1</maven-versions-plugin.version>
         <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
         <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
@@ -68,13 +68,14 @@
         <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
 
         <assertj-core.version>3.26.3</assertj-core.version>
-        <junit.jupiter.version>5.11.0</junit.jupiter.version>
+        <junit.jupiter.version>5.11.2</junit.jupiter.version>
+        <awaitility.version>4.2.2</awaitility.version>
 
         <skipIntegration>true</skipIntegration>
 
         <itCoverageAgent></itCoverageAgent>
-        <license-maven-plugin.version>4.5</license-maven-plugin.version>
-        <mockito-core.version>5.13.0</mockito-core.version>
+        <license-maven-plugin.version>4.6</license-maven-plugin.version>
+        <mockito-core.version>5.14.2</mockito-core.version>
         <maven-install-plugin.version>3.1.3</maven-install-plugin.version>
     </properties>
 
@@ -184,6 +185,7 @@
                     <argLine>
                         --add-exports java.management/sun.management=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -220,6 +222,7 @@
                     <argLine>
                         --add-exports java.management/sun.management=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -351,6 +354,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
